--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Pillow==7.1.1
 psycopg2==2.8.5
 pycparser==2.20
 python-dateutil==2.8.1
+psycopg2-binary==2.8.5
 python3-openid==3.2.0
 pytz==2019.3
 requests==2.24.0
