--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,549 @@ soupsieve==2.0
 sqlparse==0.3.1
 text-unidecode==1.3
 urllib3==1.25.9
+aardwolf==0.2.2
+absl-py==1.4.0
+adblockparser==0.7
+aesedb==0.1.3
+aiocmd==0.1.2
+aioconsole==0.3.1
+aiodns==3.0.0
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiomultiprocess==0.9.0
+aioredis==1.3.1
+aiosignal==1.3.1
+aiosmb==0.4.4
+aiosqlite==0.17.0
+aiowinreg==0.0.7
+ajpy==0.0.4
+alembic==1.8.1.dev0
+altgraph==0.17.3
+aniso8601==9.0.1
+anyio==3.6.2
+apispec==5.2.2
+apispec-webframeworks==0.5.2
+appdirs==1.4.4
+APScheduler==3.9.1
+arc4==0.3.0
+argcomplete==2.0.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asciitree==0.3.3
+asgiref==3.6.0
+asn1crypto==1.5.1
+asn1tools==0.164.0
+asttokens==2.2.1
+asyauth==0.0.9
+async-timeout==4.0.2
+asysocks==0.2.2
+attrs==22.2.0
+autobahn==22.7.1
+autocommand==2.2.2
+Automat==22.10.0
+Babel==2.10.3
+backcall==0.2.0
+backoff==2.2.1
+base58==1.0.3
+bcrypt==3.2.2
+beautifulsoup4==4.12.2
+beniget==0.4.1
+bidict==0.22.1
+binwalk==2.3.3
+bitstruct==8.15.1
+bleach==5.0.1
+blinker==1.5
+bluepy==1.3.0
+bottle==0.12.23
+Bottleneck==1.3.5
+Brlapi==0.8.4
+Brotli==1.0.9
+capstone==4.0.2
+cbor==1.0.0
+censys==2.2.2
+certifi==2022.9.24
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==3.0.1
+cheroot==9.0.0+ds1
+CherryPy==18.8.0
+cherrypy-cors==1.6
+cli-helpers==2.3.0
+click==8.1.3
+click-plugins==1.1.1
+cmd2==2.4.2+ds
+colorama==0.4.6
+colored-traceback==0.3.0
+comm==0.1.2
+commonmark==0.9.1
+configobj==5.0.8
+constantly==15.1.0
+contourpy==1.0.7
+crackmapexec==5.4.0
+cryptography==38.0.4
+cryptography37==37.0.2
+cupshelpers==1.0
+cvss==2.4
+cycler==0.11.0
+Cython==0.29.32
+dbus-python==1.3.2
+debtags==2.1
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dicttoxml==1.7.15
+diskcache==5.4.0
+distlib==0.3.6
+distro==1.8.0
+Django==3.2.19
+django-allauth==0.54.0
+django-bootstrap4==23.1
+dnslib==0.9.23
+dnspython==2.3.0
+docopt==0.6.2
+donut-shellcode==0.9.3
+dropbox==11.34.0
+dsinternals==1.2.4
+ecdsa==0.18.0
+email-validator==1.3.0
+et-xmlfile==1.0.1
+executing==1.2.0
+ExifRead==3.0.0
+faraday-agent-dispatcher==2.4.0
+faraday-agent-parameters-types==1.2.0
+faraday-cli==2.1.8
+faraday-plugins==1.12.0
+faradaysec==4.4.0
+fastapi==0.92.0
+fastjsonschema==2.16.3
+feedparser==6.0.10
+fierce==1.5.0
+filedepot==0.5.2
+filelock==3.9.0
+filteralchemy==0.1.0
+flasgger==0.9.5
+Flask==2.2.2
+Flask-Classful==0.15.0.dev1
+Flask-KVSession-fork==0.6.4
+Flask-Limiter==3.3.1
+Flask-Login==0.6.2
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-RESTful==0.3.9
+Flask-Security-Too==4.0.0
+Flask-SocketIO==5.3.2
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+flatbuffers==2.0.8+dfsg1.2
+fonttools==4.38.0
+fqdn==1.5.1
+frozenlist==1.3.3
+fs==2.4.16
+future==0.18.2
+gast==0.5.2
+GDAL==3.6.4
+geographiclib==2.0
+geopy==2.3.0
+ghp-import==2.1.0
+gitdb==4.0.9
+GitPython==3.1.30
+gnureadline==8.1.2
+gpg==1.18.0
+greenlet==2.0.2
+h11==0.14.0
+h2==4.1.0
+hashID==3.1.4
+hiredis==1.0.1
+hpack==4.0.0
+html2text==2020.1.16
+html5lib==1.1
+httpagentparser==1.9.1
+httpcore==0.16.3
+httpx==0.23.3
+humanize==0.0.0
+hupper==1.10.3
+hyperframe==6.0.0
+hyperlink==21.0.0
+idna==2.10
+impacket==0.10.0
+importlib-metadata==4.12.0
+imutils==0.5.4
+incremental==21.3.0
+inflect==2.1.0
+iniconfig==1.1.1
+instagram-private-api==1.6.0.0
+intervaltree==3.0.2
+invoke==2.0.0
+ipwhois==1.2.0
+IPy==1.1
+ipykernel==6.21.1
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
+itsdangerous==2.1.2
+jaraco.classes==3.2.1
+jaraco.collections==4.2.0
+jaraco.context==4.3.0
+jaraco.functools==3.7.0
+jaraco.text==3.11.1
+jdcal==1.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jq==1.2.1
+jsonpointer==2.3
+jsonschema==4.10.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.0.2
+jupyter_core==5.2.0
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+kaitaistruct==0.10
+kali-tweaks==2023.3.1
+keyboard==0.13.5
+KismetCaptureBtGeiger==2021.7.1
+KismetCaptureFreaklabsZigbee==2018.7.0
+KismetCaptureRtl433==2020.10.1
+KismetCaptureRtladsb==2020.10.1
+KismetCaptureRtlamr==2020.10.1
+kiwisolver==0.0.0
+ldap3==2.9.1
+ldapdomaindump==0.9.3
+lightdm-gtk-greeter-settings==1.2.2
+limits==2.8.0
+livereload==2.6.3
+log-symbols==0.0.14
+louis==3.24.0
+lsassy==3.1.6
+lunr==0.6.2
+lxml==4.9.2
+lz4==4.0.2+dfsg
+macholib==1.16.2
+Mako==1.2.4.dev0
+Markdown==3.4.1
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+marshmallow==3.18.0
+marshmallow-sqlalchemy==0.29.0
+masky==0.1.1
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mechanize==0.4.8
+mediapipe==0.10.0
+mergedeep==1.3.4
+minidump==0.0.21
+minikerberos==0.4.0
+mistune==2.0.5
+mistune0==0.8.4
+mitmproxy==9.0.1
+mkdocs==1.4.2
+mnemonic==0.19
+more-itertools==8.10.0
+MouseInfo==0.1.3
+mpmath==0.0.0
+msgpack==1.0.3
+msldap==0.4.7
+multidict==6.0.4
+munkres==1.1.4
+mysqlclient==1.4.6
+nassl==5.0.1
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.10
+nbformat==5.8.0
+neo4j==5.2.dev0
+neobolt==1.7.17
+neotime==1.7.4
+nest-asyncio==1.5.6
+netaddr==0.8.0
+netifaces==0.11.0
+networkx==2.8.8
+nltk==3.8
+notebook==6.5.3
+notebook_shim==0.2.2
+notus-scanner==22.4.4
+nplusone==1.0.0
+numexpr==2.8.4
+numpy==1.24.2
+oauthlib==3.2.2
+odfpy==1.4.2
+olefile==0.46
+onboard==1.4.1
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+openpyxl==3.0.9
+ordered-set==4.1.0
+oscrypto==1.3.0
+ospd-openvas==22.4.6
+overrides==7.3.1
+packaging==23.1
+paho-mqtt==1.6.1
+pandas==1.5.3
+pandocfilters==1.5.0
+paramiko==2.12.0
+parso==0.8.3
+passlib==1.7.4
+Paste==3.5.2
+PasteDeploy==3.0.1
+PasteScript==3.2.1
+patator==0.9
+pbr==5.10.0
+pcapy==0.11.5.dev0
+pefile==2023.2.7
+pendulum==2.1.2
+pexpect==4.8.0
+pgcli==3.5.0
+pgspecial==2.0.1
+phonenumbers==8.12.57
+pickleshare==0.7.5
+Pillow==9.4.0
+pipx==1.2.0
+plaster==1.0
+plaster-pastedeploy==0.5
+platformdirs==3.5.3
+pluggy==1.0.0+repack
+pluginbase==1.0.1
+plumbum==0.0.0
+ply==3.11
+portend==3.1.0
+prettytable==0.7.2
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
+protobuf==3.20.3
+psutil==5.9.4
+psycopg==3.1.3
+psycopg2==2.9.5
+ptyprocess==0.7.0
+publicsuffix2==2.20191221
+publicsuffixlist==0.9.3
+pure-eval==0.0.0
+pwntools==4.10.0
+py==1.11.0
+py-sneakers==1.0.1
+py-ubjson==0.16.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pycairo==1.20.1
+pycares==4.3.0
+pycparser==2.21
+pycryptodomex==3.11.0
+pycups==2.0.1
+pycurl==7.45.2
+pydantic==1.10.4
+PyDispatcher==2.0.5
+pydot==1.4.2
+pyee==9.0.4
+pyelftools==0.29
+pyExploitDb==0.2.6
+pyfiglet==0.8.post0
+pygame==2.1.2
+PyGetWindow==0.0.9
+pygexf==0.2.2
+Pygments==2.14.0
+PyGObject==3.42.2
+pygraphviz==1.7
+PyHamcrest==2.0.3
+pyinotify==0.9.6
+PyInstaller==3.5+498e6ee058
+PyJWT==2.6.0
+pylnk3==0.4.2
+pyminifier==2.1
+PyMsgBox==1.0.9
+pymssql==2.2.2
+PyMySQL==1.0.2
+PyNaCl==1.5.0
+PyOpenGL==3.1.6
+pyOpenSSL==23.0.0
+pyotp==2.6.0
+pyparsing==3.0.9
+PyPDF2==2.12.1
+pyperclip==1.8.2
+pypng==0.20220715.0
+pyppeteer==1.0.1
+pypsrp==0.8.1
+pypykatz==0.6.6
+PyQRCode==1.2.1
+PyQt5==5.15.9
+PyQt5-sip==12.11.1
+PyQt6==6.4.2
+PyQt6-sip==13.4.1
+pyramid==2.0
+PyRect==0.2.0
+pyrsistent==0.18.1
+PyScreeze==0.1.28
+pyserial==3.5
+pyShodan==0.2.6
+pysmbc==1.0.23
+pysmi==0.3.2
+pysnmp==4.4.12
+PySocks==1.7.1
+pyspnego==0.8.0
+pytest==7.2.1
+python-apt==2.6.0
+python-dateutil==2.8.2
+python-debian==0.1.49
+python-docx==0.8.11
+python-dotenv==1.0.0
+python-engineio==4.3.4
+python-gnupg==0.4.9
+python-gvm==23.2.0
+python-json-logger==2.0.7
+python-magic==0.4.26
+python-multipart==0.0.5
+python-owasp-zap-v2.4==0.0.20
+python-pam==2.0.2
+python-pptx==0.6.18
+python-slugify==4.0.0
+python-snappy==0.5.3
+python-socketio==5.7.2
+python-status==1.0.1
+python3-openid==3.2.0
+python3-xlib==0.15
+PyTrie==0.4.0
+pytweening==1.0.7
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pytzdata==2020.1
+pyVNC==0.1
+pywerview==0.3.3
+pyxdg==0.28
+PyYAML==6.0
+pyyaml_env_tag==0.1
+pyzmq==25.0.0
+qrcode==7.4.2
+qtconsole==5.4.3
+QtPy==2.3.1
+Quamash==0.6.1
+redis==4.3.4
+regex==2022.10.31
+repoze.lru==0.7
+requests==2.24.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.10.1
+retrying==1.3.3
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rfc3987==1.3.8
+rich==13.3.1
+ROPGadget==7.3
+Routes==2.5.1
+rpyc==5.3.1
+rq==1.13.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+scapy==2.5.0
+seaborn==0.12.2
+secure==0.3.0
+Send2Trash==1.8.0
+service-identity==18.1.0
+setproctitle==1.3.1
+sgmllib3k==1.0.0
+shodan==1.28.0
+simple-rest-client==1.1.3
+simplejson==3.18.4
+simplekv==0.14.1
+simpy==4.0.1
+six==1.16.0
+slowapi==0.1.4
+smmap==5.0.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+sounddevice==0.4.6
+soupsieve==2.4.1
+speaklater==1.4
+spinners==0.0.24
+SQLAlchemy==1.4.46
+sqlalchemy-migrate==0.13.0
+sqlalchemy-schemadisplay==1.3
+SQLAlchemy-Utc==0.14.0
+sqlparse==0.4.2
+sslyze==5.1.3
+stack-data==0.6.2
+starlette==0.26.1
+stone==3.3.1
+sympy==1.11.1
+syslog-rfc5424-formatter==1.2.3
+tables==3.7.0
+tabulate==0.8.9
+Tempita==0.5.2
+tempora==5.3.0
+termcolor==1.1.0
+terminado==0.17.1
+terminaltables==3.1.10
+texttable==1.6.7
+theHarvester==4.3.0
+tinycss2==1.2.1
+tld==0.11.11
+tls-parser==1.2.2
+tomli==2.0.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.9.0
+translationstring==1.4
+Twisted==22.4.0
+txaio==21.2.1
+typing_extensions==4.4.0
+tzlocal==4.2
+u-msgpack-python==2.3.0
+ufoLib2==0.14.0
+ujson==5.7.0
+unicodecsv==0.14.1
+unicodedata2==15.0.0
+unicorn==2.0.1.post1
+unicrypto==0.0.10
+Unidecode==1.3.6
+uri-template==1.2.0
+uritemplate==4.1.1
+urllib3==1.25.11
+urwid==2.1.2
+userpath==1.8.0
+uvicorn==0.17.6
+uvloop==0.17.0
+validators==0.20.0
+venusian==3.0.0
+virtualenv==20.23.0+ds
+wafw00f==2.2.0
+wapiti3==3.0.4
+watchdog==2.2.1
+wcwidth==0.2.5
+webargs==8.0.1
+webcolors==1.11.1
+webencodings==0.5.1
+WebOb==1.8.6
+websocket-client==1.2.3
+websockets==10.4
+websockify==0.10.0
+Werkzeug==2.2.2
+wfuzz==3.1.0
+whois==0.8
+widgetsnbextension==4.0.7
+wifite==2.7.0
+winacl==0.1.7
+wrapt==1.14.1
+wsaccel==0.6.3
+wsproto==1.2.0
+WTForms==3.0.1
+xdg==5
+xlrd==1.2.0
+XlsxWriter==3.0.2
+xlutils==2.0.0
+xlwt==1.3.0
+xmltodict==0.13.0
+yara-python==4.2.0
+yarl==1.8.2
+yaswfp==0.9.3
+zc.lockfile==2.0
+zipp==1.0.0
+zlib-wrapper==0.1.3
+zope.deprecation==4.4.0
+zope.interface==5.5.2
